--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
-      href="./node_modules/basiclightbox/dist/basicLightbox.min.css"
+      href="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css"
     />
   </head>
   <body>
     <ul class="gallery"></ul>
 
     <script src="./gallery.js" type="module"></script>
-    <script src="./node_modules/basiclightbox/dist/basicLightbox.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
   </body>
 </html>
